--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,6 @@ jobs:
             echo "This has been put in place due to the enormous amounts of traffic hundreds/thousands of parallel builds can cause on external infrastructure."
             exit 1
           fi
-          echo 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 | docker login ghcr.io -u Soloturkh --password-stdin
           exit 0
   build_base:
     name: Build base image
@@ -45,6 +44,8 @@ jobs:
     needs: pre_check
     runs-on: ubuntu-latest
     steps:
+      - name: Docker test
+        run: echo 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 | docker login ghcr.io -u Soloturkh --password-stdin
       - name: Free Disk-Space
         run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
       - name: Checkout
